[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/DebugHUD.gd" id="1"]

[node name="UI" type="CanvasLayer"]

[node name="DebugHUD" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")
chunk_manager_path = NodePath("../../ChunkManager")
caravan_path = NodePath("../../Caravan")

[node name="MarginContainer" type="MarginContainer" parent="DebugHUD"]
anchors_preset = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 640.0
offset_bottom = 200.0

[node name="VBoxContainer" type="VBoxContainer" parent="DebugHUD/MarginContainer"]

[node name="SeedLabel" type="Label" parent="DebugHUD/MarginContainer/VBoxContainer"]
text = "Seed:"

[node name="ChunkLabel" type="Label" parent="DebugHUD/MarginContainer/VBoxContainer"]
text = "Chunk:"

[node name="InventoryLabel" type="Label" parent="DebugHUD/MarginContainer/VBoxContainer"]
text = "Inventory"

[node name="FPSLabel" type="Label" parent="DebugHUD/MarginContainer/VBoxContainer"]
text = "FPS"
